<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlueSky"
    android:padding="@dimen/dim_all"
    android:gravity="center"

    tools:context=".InscriptionFragment">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dim_top"
        android:textSize="@dimen/dim_title"
        android:layout_gravity="center"
        android:text="@string/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/txtFirstName"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/dim_title"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:inputType="text"
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/dim_top"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/dim_title"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="@dimen/dim_top"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dim_title"
        android:text="@string/degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/cbOLevel"
        android:textSize="@dimen/dim_title"
        android:layout_marginLeft="@dimen/dim_middle"
        android:textColor="@color/colorWhite"
        android:text="@string/o_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <CheckBox
        android:id="@+id/cbBachelor"
        android:textSize="@dimen/dim_title"
        android:textColor="@color/colorWhite"
        android:text="@string/bachelor"
        android:layout_marginLeft="@dimen/dim_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/cbMaster"
        android:layout_marginLeft="@dimen/dim_middle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dim_title"
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </CheckBox>

    <Button
        android:textColor="@color/colorBlueDark"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/dim_top"
        android:textSize="@dimen/dim_title"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Button>

</LinearLayout>