<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_all"
    tools:context=".MainActivity">


    <TextView
        android:layout_marginTop="@dimen/dim_top"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/dim_title"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </TextView>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <Button
        android:background="@color/colorBlueSky"
        android:id="@+id/btnConnect"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Button>

    <Button
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlueDark"
        android:id="@+id/btnSignUp"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Button>

</LinearLayout>